fix: change auto sync py file

--- a/.github/workflows/auto-sync.yml
+++ b/.github/workflows/auto-sync.yml
@@ -27,7 +27,8 @@ jobs:
           pip install requests
 
       - name: Run sync script
-        run: python syncSeerH5Data.py
+        # run: python syncSeerH5Data.py
+        run: python json&xml.py
 
       - name: Configure Git
         run: |
